[project]
name = "zephyr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
zephyr = "zephyr:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "ruff>=0.14.8",
]

[tool.ruff]
    lint.select = [
        "A",   # flake8-builtins
        "ANN", # flake8-annotations
        "B",   # flake8-bugbear
        "BLE", # flake8-blind-except
        "C",   # flake8-comprehensions
        "COM", # flake8-commas
        "C90", # mccabe
        "E",   # pycodestyle errors
        "F",   # pyflakes
        "G",   # flake8-logging-format
        "I",   # isort
        "PD",  # pandas-vet
        "RUF", # ruff-specific rules
        "S5",  # flake8-bandit
        "T10", # flake&-debugger
        "T20", # flake8-print
        "W",   # pycodestyle warnings
    ]

    lint.ignore = [
        "W191",   # tab-indentation,
        "E111",   # indentation-with-invalid-multiple
        "E114",   # indentation-with-invalid-multiple-comment
        "E117",   # over-indented
        "D206",   # indent-with-spaces
        "D300",   # triple-single-quotes
        "Q000",   # bad-quotes-inline-string
        "Q001",   # bad-quotes-multiline-string
        "Q002",   # bad-quotes-docstring
        "Q003",   # avoidable-escaped-quote
        "COM812", # missing-trailing-comma
        "COM819", # prohibited-trailing-comma
        "ISC001", # single-line-implicit-string-concatenation
        "ISC002", # multi-line-implicit-string-concatenation
        "ANN204", # missing-return-type-special-method
        "S105",   # hardcoded-password-string
        "E501",   # line-too-long
    ]

    exclude = [
        "tests/data"
    ]


[tool.ruff.format]
    quote-style = "double"
    indent-style = "space"
    line-ending = "auto"

